gamer section added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <main>
       <!-- gamer section starts -->
-      <!-- <section class="gamer">
+      <section class="gamer">
         <div class="gamer-container">
           <div class="gamer-img">
             <img src="images/team.png" alt="team" />
@@ -75,7 +75,7 @@
             <p class="unlesh">“unleash the gamer in everyone”</p>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
     <footer></footer>
   </body>
