game section added with responsive

--- a/index.html
+++ b/index.html
@@ -76,6 +76,33 @@
           </div>
         </div>
       </section>
+
+      <!-- game section starts -->
+      <section class="game">
+        <div class="game-container">
+          <div class="game-content">
+            <div class="game-text">
+              <h1 class="title">
+                Play Instantly, <br />
+                <span class="game-span">
+                  No Downloads <br />
+                  No Installs.
+                </span>
+              </h1>
+              <p class="description">
+                Play games online for free without downloading. Just click the
+                Play button and play instantly in your browser.
+              </p>
+            </div>
+          </div>
+          <div class="game-img">
+            <img src="images/game-1.png" alt="game" />
+            <div class="game-child-img">
+              <img src="images/game-2.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
