online game section added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,40 @@
         </div>
       </section>
 
+      <!-- online game section -->
+      <section class="online-game">
+        <div class="online-game-container">
+          <div class="online-game-content">
+            <h1 class="title">
+              Online Games <span class="color-span"> Funny Videos</span>
+            </h1>
+            <p class="description">
+              A Collection of Hilarious Videos to Brighten Your Day
+            </p>
+          </div>
+          <div class="online-game-card">
+            <div class="card">
+              <div class="card-item">
+                <img src="images/item-1.png" alt="item-1">
+                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+              </div>
+              <div class="card-item">
+                <img src="images/item-2.png" alt="item-2">
+                <p>Did you score? #unblockedgames #school</p>
+              </div>
+              <div class="card-item">
+                <img src="images/item-1.png" alt="item-1">
+                <p>Breaking game records like OG</p>
+              </div>
+              <div class="card-item">
+                <img src="images/item-4.png" alt="item-4">
+                <p>Busted gaming on school laptop, but you are still lit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- game section starts -->
       <section class="game">
         <div class="game-container">
@@ -84,7 +118,7 @@
             <div class="game-text">
               <h1 class="title">
                 Play Instantly, <br />
-                <span class="game-span">
+                <span class="color-span">
                   No Downloads <br />
                   No Installs.
                 </span>
