--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
           <div class="online-game-card">
             <div class="card">
               <div class="card-item">
-                <img src="images/item-1.png" alt="item-1">
+                <img src="images/item-1.png" alt="item-1" />
                 <p>No Download. No Installs. Play games Instantly on Gamer.</p>
               </div>
               <div class="card-item">
-                <img src="images/item-2.png" alt="item-2">
+                <img src="images/item-2.png" alt="item-2" />
                 <p>Did you score? #unblockedgames #school</p>
               </div>
               <div class="card-item">
-                <img src="images/item-1.png" alt="item-1">
+                <img src="images/item-1.png" alt="item-1" />
                 <p>Breaking game records like OG</p>
               </div>
               <div class="card-item">
-                <img src="images/item-4.png" alt="item-4">
+                <img src="images/item-4.png" alt="item-4" />
                 <p>Busted gaming on school laptop, but you are still lit.</p>
               </div>
             </div>
@@ -135,6 +135,39 @@
               <img src="images/game-2.png" alt="" />
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- category section starts -->
+      <section class="category">
+        <div class="category-container">
+          <button class="category-items">
+            <img src="images/action.png" alt="action" />Action Games
+          </button>
+          <button class="category-items">
+            <img src="images/adventure.png" alt="adventure" />Adventure Games
+          </button>
+          <button class="category-items">
+            <img src="images/arcade.png" alt="arcade" />Arcade Games
+          </button>
+          <button class="category-items">
+            <img src="images/education.png" alt="education" />Educational Games
+          </button>
+          <button class="category-items">
+            <img src="images/word.png" alt="word" />Word Games
+          </button>
+          <button class="category-items">
+            <img src="images/roleplay.png" alt="role play" />Role Playing Games
+          </button>
+          <button class="category-items">
+            <img src="images/music.png" alt="music" />Music & Audio Games
+          </button>
+          <button class="category-items">
+            <img src="images/puzzle.png" alt="puzzle" />Puzzle Games
+          </button>
+          <button class="category-items">
+            <img src="images/strategy.png" alt="strategy" />Strategy Games
+          </button>
         </div>
       </section>
     </main>
