--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </section>
 
       <!-- category section starts -->
-      <section class="category">
+      <!-- <section class="category">
         <div class="category-container">
           <button class="category-items">
             <img src="images/action.png" alt="action" />Action Games
@@ -169,8 +169,57 @@
             <img src="images/strategy.png" alt="strategy" />Strategy Games
           </button>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer></footer>
+    <footer>
+      <!-- footer section starts -->
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logo.png" alt="logo" />
+          <h1 class="footer-title"><span>G</span>amer</h1>
+        </div>
+        <div class="footer-items-1">
+          <div class="item-break">
+            <li>Our Story</li>
+            <li>Games</li>
+          </div>
+          <div class="item-break">
+            <li>Web Games</li>
+            <li>Careers</li>
+          </div>
+          <div class="item-break">
+            <li>Support</li>
+            <li>My Account</li>
+          </div>
+        </div>
+        <div class="social-icons">
+          <div class="item-break">
+            <img src="images/twitter.png" alt="twitter" />
+            <img src="images/facebook.png" alt="facebook" />
+          </div>
+          <div class="item-break">
+            <img src="images/youtube.png" alt="youtube" />
+            <img src="images/linkedin.png" alt="linkedin" />
+          </div>
+          <div class="item-break">
+            <img src="images/instagram.png" alt="instagram" />
+            <img src="images/apple.png" alt="apple" />
+          </div>
+        </div>
+        <div class="footer-items-2">
+          <div class="item-break">
+            <li>Terms and Conditions</li>
+            <li>Privacy Policy</li>
+          </div>
+          <div class="item-break">
+            <li>Cookie Policy</li>
+            <li>Privacy Settings</li>
+          </div>
+        </div>
+        <div class="copyright">
+          <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
