--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
           <div class="banner-content">
             <h2 class="banner-sub-title">Play Like The</h2>
             <h1 class="banner-title">G.O.A.T.</h1>
-            <p class="banner-text">1-Click instant play</p>
-            <p class="banner-text">No Download</p>
-            <p class="banner-text">1000s of supported online games</p>
+            <p class="banner-text">
+              <i class="fa-regular fa-circle-play"></i>1-Click instant play
+            </p>
+            <p class="banner-text">
+              <i class="fa-solid fa-download"></i>No Download
+            </p>
+            <p class="banner-text">
+              <i class="fa-regular fa-user"></i>1000s of supported online games
+            </p>
             <button type="submit" class="btn-primary">Sign In</button>
             <button type="submit" class="btn-primary btn-secondary">
               Go Rogue
@@ -91,7 +97,9 @@
           <div class="online-game-card">
             <div class="card">
               <div class="card-item">
-                <img src="images/item-1.png" alt="item-1" />
+                <div class="img-item">
+                  <img src="images/item-1.png" alt="item-1" />
+                </div>
                 <p>No Download. No Installs. Play games Instantly on Gamer.</p>
               </div>
               <div class="card-item">
