--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </section>
 
       <!-- category section starts -->
-      <!-- <section class="category">
+      <section class="category">
         <div class="category-container">
           <button class="category-items">
             <img src="images/action.png" alt="action" />Action Games
@@ -177,7 +177,7 @@
             <img src="images/strategy.png" alt="strategy" />Strategy Games
           </button>
         </div>
-      </section> -->
+      </section>
     </main>
     <footer>
       <!-- footer section starts -->
