image hover added

--- a/index.html
+++ b/index.html
@@ -99,19 +99,41 @@
               <div class="card-item">
                 <div class="img-item">
                   <img src="images/item-1.png" alt="item-1" />
+                  <div class="child">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                  </div>
                 </div>
                 <p>No Download. No Installs. Play games Instantly on Gamer.</p>
               </div>
               <div class="card-item">
-                <img src="images/item-2.png" alt="item-2" />
+                <div class="img-item">
+                  <img src="images/item-2.png" alt="item-2" />
+                  <div class="child">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                  </div>
+                </div>
                 <p>Did you score? #unblockedgames #school</p>
               </div>
               <div class="card-item">
-                <img src="images/item-1.png" alt="item-1" />
+                <div class="img-item">
+                  <img src="images/item-2.png" alt="item-2" />
+                  <div class="child">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                  </div>
+                </div>
                 <p>Breaking game records like OG</p>
               </div>
               <div class="card-item">
-                <img src="images/item-4.png" alt="item-4" />
+                <div class="img-item">
+                  <img src="images/item-4.png" alt="item-4" />
+                  <div class="child">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <p>Watch Now</p>
+                  </div>
+                </div>
                 <p>Busted gaming on school laptop, but you are still lit.</p>
               </div>
             </div>
