--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamer Zone</title>
-    <link rel="icon" type="image" href="images/logo.png" />
+    <title>Gamer Zone Landing Page</title>
+    <link rel="icon" type="image" href="images/favicon.png" />
     <link rel="stylesheet" href="styles/style.css" />
     <script
       src="https://kit.fontawesome.com/b94d418c48.js"
@@ -33,35 +33,39 @@
           </div>
         </div>
       </nav>
-
-      <!-- banner section starts -->
-      <section class="banner">
-        <div class="banner-container">
-          <div class="banner-content">
-            <h2 class="banner-sub-title">Play Like The</h2>
-            <h1 class="banner-title">G.O.A.T.</h1>
-            <p class="banner-text">
-              <i class="fa-regular fa-circle-play"></i>1-Click instant play
-            </p>
-            <p class="banner-text">
-              <i class="fa-solid fa-download"></i>No Download
-            </p>
-            <p class="banner-text">
-              <i class="fa-regular fa-user"></i>1000s of supported online games
-            </p>
-            <button type="submit" class="btn-primary">Sign In</button>
-            <button type="submit" class="btn-primary btn-secondary">
-              Go Rogue
-            </button>
-          </div>
-          <div class="banner-img">
-            <img src="images/banner.png" alt="banner" />
-          </div>
-        </div>
-      </section>
     </header>
 
     <main>
+      <!-- banner section starts -->
+      <section class="banner">
+        <div class="banner-container">
+          <div class="banner-left-img">
+            <img src="images/banner-left.png" alt="banner-left" />
+            <div class="banner-content">
+              <h2 class="banner-sub-title">Play Like The</h2>
+              <h1 class="banner-title">G.O.A.T.</h1>
+              <p class="banner-text">
+                <i class="fa-regular fa-circle-play"></i>1-Click instant play
+              </p>
+              <p class="banner-text">
+                <i class="fa-solid fa-download"></i>No Download
+              </p>
+              <p class="banner-text">
+                <i class="fa-regular fa-user"></i>1000s of supported online
+                games
+              </p>
+              <button type="submit" class="btn-primary">Sign In</button>
+              <button type="submit" class="btn-primary btn-secondary">
+                Go Rogue
+              </button>
+            </div>
+          </div>
+          <div class="banner-right-img">
+            <img src="images/banner-right.png" alt="banner-right" />
+          </div>
+        </div>
+      </section>
+
       <!-- gamer section starts -->
       <section class="gamer">
         <div class="gamer-container">
@@ -85,57 +89,63 @@
 
       <!-- online game section -->
       <section class="online-game">
-        <div class="online-game-container">
-          <div class="online-game-content">
-            <h1 class="title">
-              Online Games <span class="color-span"> Funny Videos</span>
-            </h1>
-            <p class="description">
-              A Collection of Hilarious Videos to Brighten Your Day
-            </p>
-          </div>
-          <div class="online-game-card">
-            <div class="card">
-              <div class="card-item">
-                <div class="img-item">
-                  <img src="images/item-1.png" alt="item-1" />
-                  <div class="child">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
-                  </div>
+        <div class="online-game-content">
+          <h1 class="title">
+            Online Games <span class="color-span"> Funny Videos</span>
+          </h1>
+          <p class="description">
+            A Collection of Hilarious Videos to Brighten Your Day
+          </p>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <div class="card-item">
+              <div class="card-parent">
+                <img src="images/item-1.png" alt="item-1" />
+                <div class="card-child">
+                  <i class="fa-regular fa-circle-play hover-play"></i>
+                  <p class="hover-text">Watch Now</p>
                 </div>
-                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
               </div>
-              <div class="card-item">
-                <div class="img-item">
-                  <img src="images/item-2.png" alt="item-2" />
-                  <div class="child">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
-                  </div>
+              <p class="card-caption">
+                Busted gaming on school laptop, but you are still lit.
+              </p>
+            </div>
+            <div class="card-item">
+              <div class="card-parent">
+                <img src="images/item-2.png" alt="item-2" />
+                <div class="card-child">
+                  <i class="fa-regular fa-circle-play hover-play"></i>
+                  <p class="hover-text">Watch Now</p>
                 </div>
-                <p>Did you score? #unblockedgames #school</p>
               </div>
-              <div class="card-item">
-                <div class="img-item">
-                  <img src="images/item-2.png" alt="item-2" />
-                  <div class="child">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
-                  </div>
+              <p class="card-caption">
+                Did you score? #unblockedgames #school
+              </p>
+            </div>
+            <div class="card-item">
+              <div class="card-parent">
+                <img src="images/item-4.png" alt="item-4" />
+                <div class="card-child">
+                  <i class="fa-regular fa-circle-play hover-play"></i>
+                  <p class="hover-text">Watch Now</p>
                 </div>
-                <p>Breaking game records like OG</p>
               </div>
-              <div class="card-item">
-                <div class="img-item">
-                  <img src="images/item-4.png" alt="item-4" />
-                  <div class="child">
-                    <i class="fa-regular fa-circle-play"></i>
-                    <p>Watch Now</p>
-                  </div>
+              <p class="card-caption">
+                Breaking game records like OG
+              </p>
+            </div>
+            <div class="card-item">
+              <div class="card-parent">
+                <img src="images/item-2.png" alt="item-2" />
+                <div class="card-child">
+                  <i class="fa-regular fa-circle-play hover-play"></i>
+                  <p class="hover-text">Watch Now</p>
                 </div>
-                <p>Busted gaming on school laptop, but you are still lit.</p>
               </div>
+              <p class="card-caption">
+                Busted gaming on school laptop, but you are still lit.
+              </p>
             </div>
           </div>
         </div>
@@ -159,11 +169,50 @@
               </p>
             </div>
           </div>
-          <div class="game-img">
-            <img src="images/game-1.png" alt="game" />
+          <div class="game-parent-img">
+            <img src="images/game-1.png" alt="game-1" />
             <div class="game-child-img">
-              <img src="images/game-2.png" alt="" />
+              <img src="images/game-2.png" alt="game-2" />
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- play section starts -->
+
+      <!-- career section starts -->
+      <section class="career">
+        <div class="career-container">
+          <div class="career-content">
+            <h1 class="career-title">Careers</h1>
+            <p class="career-description">
+              Gamer is driven to create the best and most fun games for our
+              millions of players all around the world, and we,re always on the
+              lookout for more top talent to join our growing team. If you,d
+              like to help us make great games and be a part of Gamers bright
+              future, we,d love to hear from you.
+            </p>
+            <div class="career-list">
+              <ul class="designation">
+                <li>Multimedia Artist +</li>
+                <li>Data Engineer +</li>
+                <li>Adroid Engineer +</li>
+                <li>Server Developer +</li>
+                <li>Group Financial Accountant +</li>
+                <li>Senior User Acuisition Specialist +</li>
+              </ul>
+              <ul class="country">
+                <li>Lisbon, Portugal</li>
+                <li>Lisbon, Portugal</li>
+                <li>Zoetermeer, Netherlands</li>
+                <li>Lisbon, Portugal</li>
+                <li>London, United Kingdom</li>
+                <li>Lisbon, Portugal</li>
+              </ul>
+            </div>
+          </div>
+          <div class="career-img">
+            <img src="images/career.png" alt="career" />
           </div>
         </div>
       </section>
@@ -204,52 +253,36 @@
 
     <footer>
       <!-- footer section starts -->
-      <div class="footer-content">
+      <div class="footer-container">
         <div class="footer-logo">
           <img src="images/logo.png" alt="logo" />
           <h1 class="footer-title"><span>G</span>amer</h1>
         </div>
-        <div class="footer-items-1">
-          <div class="item-break">
-            <li>Our Story</li>
-            <li>Games</li>
-          </div>
-          <div class="item-break">
-            <li>Web Games</li>
-            <li>Careers</li>
-          </div>
-          <div class="item-break">
-            <li>Support</li>
-            <li>My Account</li>
-          </div>
-        </div>
+        <ul class="footer-items-1">
+          <li>Our Story</li>
+          <li>Games</li>
+          <li>Web Games</li>
+          <li>Careers</li>
+          <li>Support</li>
+          <li>My Account</li>
+        </ul>
         <div class="social-icons">
-          <div class="item-break">
-            <img src="images/twitter.png" alt="twitter" />
-            <img src="images/facebook.png" alt="facebook" />
-          </div>
-          <div class="item-break">
-            <img src="images/youtube.png" alt="youtube" />
-            <img src="images/linkedin.png" alt="linkedin" />
-          </div>
-          <div class="item-break">
-            <img src="images/instagram.png" alt="instagram" />
-            <img src="images/apple.png" alt="apple" />
-          </div>
+          <img src="images/twitter.png" alt="twitter" />
+          <img src="images/facebook.png" alt="facebook" />
+          <img src="images/youtube.png" alt="youtube" />
+          <img src="images/linkedin.png" alt="linkedin" />
+          <img src="images/instagram.png" alt="instagram" />
+          <img src="images/apple.png" alt="apple" />
         </div>
-        <div class="footer-items-2">
-          <div class="item-break">
-            <li>Terms and Conditions</li>
-            <li>Privacy Policy</li>
-          </div>
-          <div class="item-break">
-            <li>Cookie Policy</li>
-            <li>Privacy Settings</li>
-          </div>
-        </div>
-        <div class="copyright">
-          <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
-        </div>
+        <ul class="footer-items-2">
+          <li>Terms and Conditions</li>
+          <li>Privacy Policy</li>
+          <li>Cookie Policy</li>
+          <li>Privacy Settings</li>
+        </ul>
+        <small class="copyright">
+          Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </small>
       </div>
     </footer>
   </body>
