tablet version bug fixed

--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
                   <p class="hover-text">Watch Now</p>
                 </div>
               </div>
-              <p class="card-caption">
-                Did you score? #unblockedgames #school
-              </p>
+              <p class="card-caption">Did you score? #unblockedgames #school</p>
             </div>
             <div class="card-item">
               <div class="card-parent">
@@ -131,9 +129,7 @@
                   <p class="hover-text">Watch Now</p>
                 </div>
               </div>
-              <p class="card-caption">
-                Breaking game records like OG
-              </p>
+              <p class="card-caption">Breaking game records like OG</p>
             </div>
             <div class="card-item">
               <div class="card-parent">
@@ -177,8 +173,6 @@
           </div>
         </div>
       </section>
-
-      <!-- play section starts -->
 
       <!-- career section starts -->
       <section class="career">
