Done all the task

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                 <li>Lisbon, Portugal</li>
               </ul>
             </div>
+            <button class="career-button" type="submit">See all positions</button>
           </div>
           <div class="career-img">
             <img src="images/career.png" alt="career" />
