added link on footer icons

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
                 <li>Lisbon, Portugal</li>
               </ul>
             </div>
-            <button class="career-button" type="submit">See all positions</button>
+            <button class="career-button" type="submit">
+              See all positions
+            </button>
           </div>
           <div class="career-img">
             <img src="images/career.png" alt="career" />
@@ -262,12 +264,24 @@
           <li>My Account</li>
         </ul>
         <div class="social-icons">
-          <img src="images/twitter.png" alt="twitter" />
-          <img src="images/facebook.png" alt="facebook" />
-          <img src="images/youtube.png" alt="youtube" />
-          <img src="images/linkedin.png" alt="linkedin" />
-          <img src="images/instagram.png" alt="instagram" />
-          <img src="images/apple.png" alt="apple" />
+          <a href="https://twitter.com/" target="_blank"
+            ><img src="images/twitter.png" alt="twitter"
+          /></a>
+          <a href="https://facebook.com/" target="_blank"
+            ><img src="images/facebook.png" alt="facebook"
+          /></a>
+          <a href="https://youtube.com/" target="_blank"
+            ><img src="images/youtube.png" alt="youtube"
+          /></a>
+          <a href="https://linkedin.com/" target="_blank"
+            ><img src="images/linkedin.png" alt="linkedin"
+          /></a>
+          <a href="https://instagram.com/" target="_blank"
+            ><img src="images/instagram.png" alt="instagram"
+          /></a>
+          <a href="https://apple.com/" target="_blank"
+            ><img src="images/apple.png" alt="instagram"
+          /></a>
         </div>
         <ul class="footer-items-2">
           <li>Terms and Conditions</li>
