--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               growing.
             </p>
             <button type="submit" class="btn-primary">know more</button>
-            <p class="purpose">Our purpose...</p>
+            <p class="purpose">Our purpose....</p>
             <p class="unlesh">“unleash the gamer in everyone”</p>
           </div>
         </div>
